--- a/views/user/footer.ejs
+++ b/views/user/footer.ejs
@@ -243,8 +243,8 @@
         <p><i class="fas fa-phone-alt"></i><a href="tel:+911234567890">+91 12345 67890</a></p>
         <p><i class="fas fa-envelope"></i><a href="mailto:shreeclasses@gmail.com">shreeclasses@gmail.com</a></p>
         <div class="social-icons">
-          <a href="#" class="social-icon" style="display: flex; justify-content: center;"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="social-icon" style="display: flex; justify-content: center;"><i class="fab fa-twitter"></i></a>
+          <a href="" class="social-icon" style="display: flex; justify-content: center;"><i class="fab fa-facebook-f"></i></a>
+          <a href="" class="social-icon" style="display: flex; justify-content: center;"><i class="fab fa-twitter"></i></a>
           <a href="#" class="social-icon" style="display: flex; justify-content: center;"><i class="fab fa-instagram"></i></a>
           <a href="#" class="social-icon" style="display: flex; justify-content: center;"><i class="fab fa-linkedin-in"></i></a>
           <a href="#" class="social-icon" style="display: flex; justify-content: center;"><i class="fab fa-youtube"></i></a>
