--- a/views/user/navbar.ejs
+++ b/views/user/navbar.ejs
@@ -45,13 +45,7 @@
   <li><a href="/about" class="nav-link" data-page="about">About</a></li>
   <li><a href="/courses" class="nav-link" data-page="courses">Class & Courses</a></li>
   <li><a href="/contact" class="nav-link" data-page="contact">Contact</a></li>
-  <li class="nav-item dropdown">
-    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button">Login</a>
-    <ul class="dropdown-menu">
-      <li><a href="/loginstudent" class="dropdown-item">Student</a></li>
-      <li><a href="/loginadmin" class="dropdown-item">Teacher</a></li>
-    </ul>
-  </li>
+  <li><a href="/loginstudent" class="nav-link ">Login</a></li>
 </ul>
 
         </li>
